--- a/apps/villains/src/app/villains/villains-list/villains-list.component.html
+++ b/apps/villains/src/app/villains/villains-list/villains-list.component.html
@@ -1,1 +1,26 @@
-<p>villains-list works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h1>Villains</h1>
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item
+        *ngFor="let villain of villains"
+        data-test="villain-list-item"
+        (click)="selected.emit(villain)"
+      >
+        <h3 matLine>{{ villain.alias }}</h3>
+        <p matLine>Description: {{ villain.description }}</p>
+
+        <button
+          mat-icon-button
+          (click)="deleted.emit(villain); $event.stopImmediatePropagation()"
+        >
+          <mat-icon *ngIf="!readonly">delete</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
+</mat-card>
